--- a/app/globals.css
+++ b/app/globals.css
@@ -184,3 +184,11 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* Add cursor pointer to buttons by default See tailwind css documentation for more */
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled){
+    cursor:pointer;
+  }
+}
